--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yargs": "^1.3.3"
   },
   "dependencies": {
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^2.0.0"
   }
 }
