--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "yargs": "^1.3.3"
   },
   "dependencies": {
+    "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-uglify": "^2.0.0"
